--- a/index.html
+++ b/index.html
@@ -95,11 +95,18 @@
     <p class="fade-in">PissOffSpotify supports a variety of languages, being English, Spanish, Italian, French, German, Portuguese (Brazilian), Russian, 
         Arabic, Hindi, Japanese, Korean, Turkish, Vietnamese, Indonesian, Ukrainian, Polish, Persian, Sicilian. 
         Please note that aside from English, Spanish, and Italian, the translations were made using online tools. </p>
-
     <br>
-
+    <p class="fade-in">If you want to port your current Spotify songs and/or albums, use one of the following websites!</p>
+    <br>
+    <a href="https://spotidownloader.com/" class="fade-in">Spotify Downloader</a>
+    <br>
+    <a href="https://spotidown.app/" class="fade-in">Spotidown</a>
+    <br>
+    <p class="fade-in">If you wish to use one of your MP3s that do not have an album, use this website to add metadata to it!</p>
+    <br>
+    <a href="https://tagmp3.net/" class="fade-in">Tag mp3</a>
+    <br>
     <a href="https://discord.gg/pmkD8vWF2x" id="joinLink" class="fade-in">Please join our discord!!!! You can report bugs, mistranslations, and suggestions!</a>
-
     <br></br>
     
     <button class="download-btn" id="download_button" onclick="downloadApp()">Download APK</button>
