--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <br>
     <p class="fade-in">Regarding what kind of audio files you can use, please use only MP3s that have embedded pictures. 
         While using MP3s that do not have embedded pictures still works, it causes extreme lag. We are currently working on a fix for this.
-        Your MP3s do not need any other metadata. </p>
+        Your MP3s do not need any other metadata, although having Artist and Title tags are strongly recommended.</p>
     <br>
     <p class="fade-in">PissOffSpotify supports a variety of languages, being English, Spanish, Italian, French, German, Portuguese (Brazilian), Russian, 
         Arabic, Hindi, Japanese, Korean, Turkish, Vietnamese, Indonesian, Ukrainian, Polish, Persian, Sicilian. 
